tests/snapshots/end_to_end__07_bools-x86.snap
---
source: tests/end_to_end.rs
expression: x86_output
---
.globl venice_main
venice_main:
  pushq %rbp
  movq %rsp, %rbp
  subq $24, %rsp

venice_main_0:
  pushq %r12
  pushq %r13
  pushq %r14
  pushq %r15
  pushq %rbx
  movq $1, %r10
  movq %r10, -8(%rbp)
  movq $0, %r10
  movq %r10, -16(%rbp)
  movq -8(%rbp), %r10
  movq $1, %rax
  cmpq %rax, %r10
  je if_true_5
  jmp if_false_6

if_true_5:
  movq -16(%rbp), %r10
  movq %r10, %r11
  jmp if_end_7

if_false_6:
  movq $0, %r10
  movq %r10, %r11
  jmp if_end_7

if_end_7:
  movq $1, %rax
  cmpq %rax, %r11
  je if_true_2
  jmp if_false_3

if_true_2:
  movq $1, %r10
  movq %r10, %r11
  jmp if_end_4

if_false_3:
  movq -16(%rbp), %r10
  xorq %rax, %rax
  testq %r10, %rax
  sete %al
  movq %rax, %r10
  movq %r10, %r11
  jmp if_end_4

if_end_4:
  movq %r11, -24(%rbp)
  movq -24(%rbp), %r10
  movq $1, %rax
  cmpq %rax, %r10
  je if_true_8
  jmp if_false_9

if_true_8:
  movq $.s_0, %r10
  movq %r10, %r11
  pushq %r10
  pushq %r11
  movq %r11, %rdi
  call venice_string_new
  popq %r11
  popq %r10
  movq %rax, %r11
  movq %r11, %r12
  pushq %r10
  pushq %r11
  movq %r12, %rdi
  call venice_println
  popq %r11
  popq %r10
  movq %rax, %r12
  jmp if_end_10

if_false_9:
  movq $.s_1, %r10
  movq %r10, %r11
  pushq %r10
  pushq %r11
  movq %r11, %rdi
  call venice_string_new
  popq %r11
  popq %r10
  movq %rax, %r11
  movq %r11, %r12
  pushq %r10
  pushq %r11
  movq %r12, %rdi
  call venice_println
  popq %r11
  popq %r10
  movq %rax, %r12
  jmp if_end_10

if_end_10:
  movq $0, %r10
  movq %r10, %rax
  jmp venice_main_return_1

venice_main_return_1:
  popq %rbx
  popq %r15
  popq %r14
  popq %r13
  popq %r12
  addq $24, %rsp
  popq %rbp
  retq

.s_0:
  .string "pass"
.s_1:
  .string "fail"

