tests/snapshots/end_to_end__08_nested_function_calls-vil.snap
---
source: tests/end_to_end.rs
expression: vil_output
---
extern venice_printint;



func increment__0 {

increment__0_0:
  R0 = load -8  // x__1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R13 = move R1
  jump %increment__0_return_1

increment__0_return_1:
}

func venice_main {

venice_main_2:
  R0 = set 38
  R1 = move R0
  call %increment__0, R1
  R1 = move R13
  R2 = move R1
  call %increment__0, R2
  R2 = move R13
  R3 = move R2
  call %increment__0, R3
  R3 = move R13
  R4 = move R3
  call %increment__0, R4
  R4 = move R13
  R5 = move R4
  call %venice_printint, R5
  R5 = move R13
  R0 = set 0
  R13 = move R0
  jump %venice_main_return_3

venice_main_return_3:
}

