tests/snapshots/end_to_end__11_fibonacci_recursive-vil.snap
---
source: tests/end_to_end.rs
expression: vil_output
---
extern venice_printint;



func fibonacci__0 {

fibonacci__0_0:
  callee_save %rg2
  callee_save %rg3
  callee_save %rg4
  callee_save %rg5
  callee_save %rg6
  frame_set_up 8
  store %rp0, -8  // n__1
  %rg0 = load -8  // n__1
  %rg1 = set 0
  cmp %rg0, %rg1
  jump_eq %if_true_1 %if_false_2

if_true_1:
  %rg2 = set 0
  %rt = move %rg2
  frame_tear_down 8
  %rg6 = callee_restore
  %rg5 = callee_restore
  %rg4 = callee_restore
  %rg3 = callee_restore
  %rg2 = callee_restore
  ret
  jump %if_end_3

if_false_2:
  %rg0 = load -8  // n__1
  %rg1 = set 1
  cmp %rg0, %rg1
  jump_eq %if_true_4 %if_false_5

if_true_4:
  %rg2 = set 1
  %rt = move %rg2
  frame_tear_down 8
  %rg6 = callee_restore
  %rg5 = callee_restore
  %rg4 = callee_restore
  %rg3 = callee_restore
  %rg2 = callee_restore
  ret
  jump %if_end_6

if_false_5:
  %rg3 = load -8  // n__1
  %rg4 = set 1
  %rg2 = sub %rg3, %rg4
  %rp0 = move %rg2
  caller_save %rg0
  caller_save %rg1
  call %fibonacci__0
  %rg1 = caller_restore
  %rg0 = caller_restore
  %rg1 = move %rt
  %rg5 = load -8  // n__1
  %rg6 = set 2
  %rg4 = sub %rg5, %rg6
  %rp0 = move %rg4
  caller_save %rg0
  caller_save %rg1
  call %fibonacci__0
  %rg1 = caller_restore
  %rg0 = caller_restore
  %rg3 = move %rt
  %rg0 = add %rg1, %rg3
  %rt = move %rg0
  frame_tear_down 8
  %rg6 = callee_restore
  %rg5 = callee_restore
  %rg4 = callee_restore
  %rg3 = callee_restore
  %rg2 = callee_restore
  ret
  jump %if_end_6

if_end_6:
  jump %if_end_3

if_end_3:
}

func venice_main {

venice_main_7:
  callee_save %rg2
  callee_save %rg3
  callee_save %rg4
  callee_save %rg5
  callee_save %rg6
  frame_set_up 8
  %rg1 = set 12
  %rp0 = move %rg1
  caller_save %rg0
  caller_save %rg1
  call %fibonacci__0
  %rg1 = caller_restore
  %rg0 = caller_restore
  %rg0 = move %rt
  store %rg0, -8  // x__2
  %rg1 = load -8  // x__2
  %rp0 = move %rg1
  caller_save %rg0
  caller_save %rg1
  call %venice_printint
  %rg1 = caller_restore
  %rg0 = caller_restore
  %rg0 = move %rt
  %rg0 = set 0
  %rt = move %rg0
  frame_tear_down 8
  %rg6 = callee_restore
  %rg5 = callee_restore
  %rg4 = callee_restore
  %rg3 = callee_restore
  %rg2 = callee_restore
  ret
}

