tests/snapshots/end_to_end__12_list_literal-x86.snap
---
source: tests/end_to_end.rs
expression: x86_output
---
.globl venice_main
venice_main:

venice_main_0:
  pushq %rbp
  movq %rsp, %rbp
  subq $8, %rsp
  pushq %r12
  pushq %r13
  pushq %r14
  pushq %r15
  pushq %rbx
  movq $3, %r11
  movq %r11, %rdi
  movq $1, %r13
  movq %r13, %r12
  negq %r12
  movq %r12, %rsi
  movq $42, %r14
  movq %r14, %rdx
  movq $1, %rbx
  movq %rbx, %r15
  negq %r15
  movq %r15, %rcx
  pushq %r10
  pushq %r11
  movb $0, %al
  call venice_list_from_varargs
  popq %r11
  popq %r10
  movq %rax, %r10
  movq %r10, -8(%rbp)
  movq -8(%rbp), %r12
  movq %r12, %rdi
  movq $1, %r13
  movq %r13, %rsi
  pushq %r10
  pushq %r11
  call venice_list_index
  popq %r11
  popq %r10
  movq %rax, %r11
  movq %r11, %rdi
  pushq %r10
  pushq %r11
  call venice_printint
  popq %r11
  popq %r10
  movq %rax, %r10
  movq $0, %r10
  movq %r10, %rax
  popq %rbx
  popq %r15
  popq %r14
  popq %r13
  popq %r12
  addq $8, %rsp
  popq %rbp
  retq


